Implement checkstyle, add contributing guidelines